# chainsight-rating-stablecoin

./: LICENSE  README.md  project.yaml
artifacts/: dfx.json
components/: dai_transfer_indexer.yaml  usdc_daily_hhi.yaml  usdc_daily_tx_filter.yaml  usdc_daily_tx_volume_snapshot.yaml  usdc_transfer_indexer.yaml
src/: Cargo.toml
src/logics/usdc_daily_tx_filter/: Cargo.toml
src/logics/usdc_daily_tx_filter/src/: lib.rs
src/logics/usdc_daily_tx_volume_snapshot/: Cargo.toml
src/logics/usdc_daily_tx_volume_snapshot/src/: lib.rs  types.rs
src/logics/usdc_transfer_indexer/: Cargo.toml
